[package]
name = "patmatch"
version = "0.1.3"
authors = ["virchau13 <virchau13@mail.hexular.net>"]
edition = "2018"
repository = "https://github.com/virchau13/patmatch"
homepage = "https://github.com/virchau13/patmatch"
documentation = "https://docs.rs/patmatch"
description = """
A configurable pattern matching / wildcard matching library.
"""
readme = "README.md"
keywords = ["pattern", "matching", "wildcard", "match"]
license = "MIT"
categories = ["algorithms"]

[dependencies]
bitflags = "1.0"
dyn-clone = "1.0.4"
